--- a/streaming-state-machine/pom.xml
+++ b/streaming-state-machine/pom.xml
@@ -24,7 +24,7 @@ under the License.
 
 	<groupId>com.dataartisans.flink</groupId>
 	<artifactId>streaming-state-demo</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0.1</version>
 	<packaging>jar</packaging>
 
 	<name>Flink Streaming Demo Job</name>
@@ -38,17 +38,17 @@ under the License.
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-streaming-scala_2.10</artifactId>
-			<version>1.2-SNAPSHOT</version>
+			<version>1.2.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-connector-kafka-0.8_2.10</artifactId>
-			<version>1.2-SNAPSHOT</version>
+			<version>1.2.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-connector-elasticsearch_2.10</artifactId>
-			<version>1.2-SNAPSHOT</version>
+			<version>1.2.1</version>
 		</dependency>
 	</dependencies>
 
@@ -64,7 +64,7 @@ under the License.
 				<dependency>
 					<groupId>org.apache.flink</groupId>
 					<artifactId>flink-streaming-scala_2.10</artifactId>
-					<version>1.2-SNAPSHOT</version>
+					<version>1.2.1</version>
 					<scope>provided</scope>
 				</dependency>
 				<dependency>
